# spark_docker_project

./: README.md  docker-compose.yml  dockerfile  main.py  pyproject.toml
data/out.parquet/: .part-00000-300414e9-a227-4e78-a30c-dae3722003ba-c000.snappy.parquet.crc  part-00000-300414e9-a227-4e78-a30c-dae3722003ba-c000.snappy.parquet
sql_scripts/: customer_favourite_product.sql  customer_longest_streak.sql
tests/integration/: input_test.py
tests/test_data/: sample_file.csv
tests/test_data/test_out.parquet/: .part-00000-c035f8a9-74e6-4d63-8695-283363cf1b0f-c000.snappy.parquet.crc  part-00000-c035f8a9-74e6-4d63-8695-283363cf1b0f-c000.snappy.parquet
tests/unit/: transformation_test.py
