[tool.poetry]
name = "etl-pipeline"
version = "0.1.0"
description = "This is an ETL test assignment project"
authors = ["varunasija <asija.varun92@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pyspark = "3.5.0"
argparse = "^1.4.0"
pytest = "^8.1.1"
pandas = "^2.2.1"
pyarrow = "^15.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
